--- a/Website/school_project/main text.html
+++ b/Website/school_project/main text.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToursInIndia</title>
-    <link rel="stylesheet" href="main text.css" />
-    <link rel="script" href="india.js" />
+    <link rel="script"  />
     <style>
 
     .container {
